--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -5,6 +5,14 @@
 
 <section class="details">
   <div class="info">
+    <h2>Usage</h2>
+    <ul>
+      <li>
+        The library is designed to work best with SVG icons that use a viewBox="0 0 24 24" and include a 2px internal padding for consistent spacing.
+      </li>
+    </ul>
+  </div>
+  <div class="info">
     <h2>Design Details</h2>
     <ul>
       <li>
