--- a/ui/ui-button/ui-button.html
+++ b/ui/ui-button/ui-button.html
@@ -65,6 +65,7 @@
         <ui-button size="icon-only">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
+        <ui-button size="icon-only" icon="settings"></ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -176,7 +177,7 @@
         <ui-button>
           <ui-icon icon="article"></ui-icon>
           Button
-          <ui-icon icon="send"></ui-icon>
+          <ui-icon icon="article"></ui-icon>
         </ui-button>
       </div>
       <div class="toolbar">
