--- a/ui/ui-focus/ui-focus.html
+++ b/ui/ui-focus/ui-focus.html
@@ -31,10 +31,10 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;body&gt;</div>
-          <div>&nbsp;&lt;ui-focus&gt;&lt;/ui-focus&gt;</div>
-          <div>&nbsp;&lt;!-- Remaining code --&gt;</div>
-          <div>&lt;/body&gt;</div>
+          &lt;body&gt;<br>
+          &nbsp;&lt;ui-focus&gt;&lt;/ui-focus&gt;<br>
+          &nbsp;&lt;!-- Remaining code --&gt;<br>
+          &lt;/body&gt;
         </code>
       </div>
     </div>
