--- a/ui/ui-button/ui-button.html
+++ b/ui/ui-button/ui-button.html
@@ -57,7 +57,7 @@
     <div>Minimal</div>
     <div class="example">
       <div class="preview">
-        <ui-button id="s">Button</ui-button>
+        <ui-button>Button</ui-button>
         <ui-button size="icon-only">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
@@ -166,31 +166,6 @@
   </div>
 
   <div class="content-item">
-    <div>Text with Icons on Both Sides</div>
-    <div class="example">
-      <div class="preview">
-        <ui-button>
-          <ui-icon icon="article"></ui-icon>
-          Button
-          <ui-icon icon="article"></ui-icon>
-        </ui-button>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          &lt;ui-button&gt;<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &nbsp;Button<br>
-          &nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;<br>
-          &lt;/ui-button&gt;
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
@@ -208,7 +183,7 @@
   </div>
 
   <div class="content-item">
-    <div>Adding Loading state.</div>
+    <div>Adding a loading attribute and state.</div>
     <div class="example">
       <div class="preview">
         <ui-button id="clickMe" onclick="load()">Start Loading</ui-button>
@@ -219,7 +194,7 @@
       </div>
       <div class="code">
         <code>
-          &lt;ui-button loading&gt;Start Loading&lt;/ui-button&gt;
+          &lt;ui-button&gt;Start Loading&lt;/ui-button&gt;
         </code>
       </div>
     </div>
