--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -8,9 +8,6 @@
     <h2>Attributes</h2>
     <ul>
       <li>
-        icon - static (init-only, optional). Default: arrow-down-small.
-      </li>
-      <li>
         size - static (optional). Default: default.<br>
         Specifies the component's sizes (extendable via CSS).
       </li>
@@ -33,47 +30,22 @@
     <div>Minimal</div>
     <div class="example">
       <div class="preview">
-        <ui-accordion>
-          <ui-item>
-            <ui-button>
-              <ui-title>What is Lorem?</ui-title>
-            </ui-button>
-            <ui-content>
-              Lorem <strong>ipsum</strong> dolor sit amet...
-            </ui-content>
-          </ui-item>
-          <ui-item>
-            <ui-button>
-              <ui-title>Why use it?</ui-title>
-            </ui-button>
-            <ui-content>
-              Lorem ipsum dolor sit amet...
-            </ui-content>
-          </ui-item>
-          <ui-item>
-            <ui-button>
-              <ui-title>Where to use?</ui-title>
-            </ui-button>
-            <ui-content>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </ui-content>
-          </ui-item>
-        </ui-accordion>
+        <ui-accordion id="accordion"></ui-accordion>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-accordion&gt;&lt;/ui-accordion&gt;</div>
+          &lt;ui-accordion id="accordion"&gt;&lt;/ui-accordion&gt;<br>
           <br>
-          items = [{<br>
+          accordion.items = [{<br>
           &nbsp;label:'What is Lorem?',<br>
-          &nbsp;content:'Lorem ipsum dolor sit amet...'<br>
+          &nbsp;content:'Lorem ipsum dolor sit amet...',<br>
           &nbsp;expanded:true<br>
           },{<br>
           &nbsp;label:'Why use it?',<br>
-          &nbsp;content:'Lorem ipsum dolor sit amet...'<br>
+          &nbsp;content:'Lorem ipsum dolor sit amet...',<br>
           &nbsp;disabled:true<br>
           },{<br>
           &nbsp;label:'Where to use?',<br>
@@ -85,3 +57,18 @@
   </div>
 
 </section>
+
+<script>
+accordion.items = [{
+label:'What is Lorem?',
+content:'Lorem ipsum dolor sit amet...',
+expanded:true
+},{
+label:'Why use it?',
+content:'Lorem ipsum dolor sit amet...',
+disabled:true
+},{
+label:'Where to use?',
+content:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <u>quis nostrud exercitation</u> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+}];
+</script>
