--- a/ui/ui-alert/ui-alert.html
+++ b/ui/ui-alert/ui-alert.html
@@ -139,3 +139,16 @@
   </div>
 
 </section>
+
+
+
+<ui-alert closable ui shape="rounded" size="default" theme="default" role="alert">
+  <ui-icon icon="info" ui aria-hidden="true">
+    <svg viewBox="0 0 24 24"><path fill="currentColor" d=""></path></svg>
+  </ui-icon>
+
+  <ui-alert-title>Update Complete</ui-alert-title>
+  <ui-alert-content>Your settings have been <strong>successfully</strong> saved.</ui-alert-content>
+  <ui-button ui="alert-close" size="none" shape="circle" role="button" theme="default" tabindex="0" aria-disabled="false"><ui-icon icon="close" ui="" aria-hidden="true"><svg viewBox="0 0 24 24"><path d=""></path></svg></ui-icon>
+  </ui-button>
+</ui-alert>
