--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -30,7 +30,7 @@
     <div>Minimal</div>
     <div class="example">
       <div class="preview">
-        <ui-accordion id="accordion"></ui-accordion>
+        <ui-accordion ui="accordion"></ui-accordion>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -59,7 +59,7 @@
 </section>
 
 <script>
-accordion.items = [{
+document.querySelector('[ui="accordion"]').items = [{
 label:'What is Lorem?',
 content:'Lorem ipsum dolor sit amet...',
 expanded:true
