--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -30,14 +30,14 @@
     <div>Minimal</div>
     <div class="example">
       <div class="preview">
-        <ui-accordion ui="accordion"></ui-accordion>
+        <ui-accordion></ui-accordion>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          &lt;ui-accordion id="accordion"&gt;&lt;/ui-accordion&gt;<br>
+          &lt;ui-accordion&gt;&lt;/ui-accordion&gt;<br>
           <br>
           accordion.items = [{<br>
           &nbsp;label:'What is Lorem?',<br>
@@ -59,7 +59,7 @@
 </section>
 
 <script>
-document.querySelector('[ui="accordion"]').items = [{
+document.querySelector('ui-accordion').items = [{
 label:'What is Lorem?',
 content:'Lorem ipsum dolor sit amet...',
 expanded:true
